namespace BethanysPieShop
{
    public enum Currency
    {
        Dollar,
        Euro,
        Pound

    }
}