namespace BethanysPieShop
{
    public enum UnitType
    {
        PerItem,
        PerBox,
        PerKg,
    }
}